2002-08-27  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2dbg.c: Always include dwarf2dbg.h.
	(dwarf2_directive_file): Adjust dummy version args.
	* ecoff.c (ecoff_directive_weakext): Add ATTRIBUTE_UNUSED.
	* expr.c (clean_up_expression <O_subtract>): Allow subtraction
	when symbol values differ.
	* read.c (do_align): Add ATTRIBUTE_UNUSED to label.
	(pseudo_set <O_subtract>): Remove unnecessary segment test.
	* config/obj-bout.c (obj_pseudo_table): Warning fix.

2002-08-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-w65.c (md_section_align): Fix typo.
	(md_parse_option): Return 0, not 1.

2002-08-22  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Section): Note that if '@' is a comment
	character then another symbol is used to prefix the section's
	type.

2002-08-22  Christian Groessler <chris@groessler.org>

	* config/tc-z8k.c (get_operands): Adjust ptr variable also in
	"case 0" case.

2002-08-12  Graeme Peterson  <gp@qnx.com>

	* configure.in: Add support for sh-**-nto* target.
	* configure: Regenerate.

2002-08-21  Nitin  Gupta  <niting@noida.hcltech.com>

	* config/tc-h8300.h (TC_LINKRELAX_FIXUP): Define.

2002-08-21  Elena Zannoni  <ezannoni@redhat.com>

	* config/tc-ppc.c (ppc_cleanup): Do something only if format
	is ELF.
	(ppc_apuinfo_section_add): Define only if format is ELF.
	(md_assemble): Emit APUinfo section only if format is ELF.
	Fix formatting.

2002-08-21  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-arc.c (md_pseudo_table <dwarf2_directive_file>): Cast.
	* config/tc-frv.c: Likewise.
	* config/tc-hppa.c: Likewise.
	* config/tc-ia64.c: Likewise.
	* config/tc-ip2k.c: Likewise.
	* config/tc-m68hc11.c: Likewise.
	* config/tc-m68k.c: Likewise.
	* config/tc-mmix.c: Likewise.
	* config/tc-mn10300.c: Likewise.
	* config/tc-sh.c: Likewise.
	* config/tc-sparc.c: Likewise.
	* config/tc-v850.c: Likewise.

2002-08-20  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (macro2): Implement rotates by zero using shifts
	by zero.
